<resources>
    <string name="app_name">Material</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_picture">Фото дня от NASA</string>
    <string name="yesterday">Вчера</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="day_before_yesterday">Позавчера</string>
    <string name="picture_before_yesterday">Фото позавчерашнего дня от NASA</string>
    <string name="picture_yesterday">Фото вчерашнего дня от NASA</string>
    <string name="picture_today">Фото дня от NASA</string>
    <string name="discription">Описание</string>
    <string name="set_theme">Выберите тему приложения</string>
    <string name="Green">Green</string>
    <string name="Pink">Pink</string>
    <string name="random_photo_mars">Случайное фото марса</string>
    <string name="camera">Снято с камеры:</string>
    <string name="tap_to_screen">Нажмите на экран</string>
    <string name="see_description">Посмотреть описание</string>
    <string name="add_note">add note</string>
</resources>
