<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?themeColorPrimaryVariant">

    <TextView
        android:id="@+id/set_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_10"
        android:text="@string/set_theme"
        android:textColor="?themeColorOnSecondary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


        <com.google.android.material.chip.Chip
            android:id="@+id/chip_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/set_theme"
            app:layout_constraintEnd_toStartOf="@id/chip_pink"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_pink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pink"
            app:layout_constraintStart_toEndOf="@id/chip_green"
            app:layout_constraintTop_toBottomOf="@id/set_theme"
            app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>