<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">


        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/main_motion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layoutDescription="@xml/motion_scene">


            <androidx.constraintlayout.widget.Group
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="title_picture_day, image_view, discription_chip" />




            <TextView
                android:id="@+id/title_picture_day"
                style="@style/TextViewStyle"
                android:layout_marginTop="500dp"
                android:paddingTop="@dimen/padding_10"
                android:text="@string/title_picture"
                app:layout_constraintBottom_toTopOf="@id/image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />


            <com.example.pictureoftheday.domain.EquilateralImageView
                android:id="@+id/image_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="500dp"
                android:contentDescription="@string/photo_of_the_day_stub"
                android:paddingStart="@dimen/padding_10"
                android:paddingEnd="@dimen/padding_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_picture_day"
                app:layout_constraintWidth_percent="0.9"
                app:srcCompat="@drawable/ic_no_photo_vector" />


            <com.google.android.material.chip.Chip
                android:id="@+id/discription_chip"
                style="@style/ActionChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="500dp"
                android:text="@string/discription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_view" />

        </androidx.constraintlayout.motion.widget.MotionLayout>

        <ProgressBar

            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>